[gd_scene format=3 uid="uid://d2sddcpaukqio"]

[ext_resource type="Script" uid="uid://cmodrkxcdi2p0" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://y44q6j28vvvu" path="res://options.tscn" id="2_0xm2m"]

[node name="Control" type="Control" unique_id=2002708806]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="FileDialog" type="FileDialog" parent="." unique_id=533295983]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.wav", "*.Ogg", "*.mp3")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=235984016]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8919753
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=448205988]
layout_mode = 2
size_flags_horizontal = 0

[node name="Import" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=803927011]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Import Sound"

[node name="StopAll" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=823800168]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Stop all sounds"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=536728982]
visible = false
layout_mode = 2

[node name="ActiveToggle" type="CheckButton" parent="VBoxContainer" unique_id=1380227880]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "Active"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" unique_id=1489369877]
clip_contents = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="SoundContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer" unique_id=495359252]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 8

[node name="SoundOptions" type="ColorRect" parent="." unique_id=924983441]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -179.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.15930319, 0.16756171, 0.18132675, 1)

[node name="Name" type="HBoxContainer" parent="SoundOptions" unique_id=693259975]
layout_mode = 0
offset_left = 42.0
offset_top = 24.0
offset_right = 538.0
offset_bottom = 64.0

[node name="NameLabel" type="Label" parent="SoundOptions/Name" unique_id=2053578530]
layout_mode = 2
text = "Name   "

[node name="NameEditor" type="LineEdit" parent="SoundOptions/Name" unique_id=926218417]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Volume" type="HBoxContainer" parent="SoundOptions" unique_id=520024599]
layout_mode = 0
offset_left = 42.0
offset_top = 85.0
offset_right = 538.0
offset_bottom = 125.0

[node name="VoumeLabel" type="Label" parent="SoundOptions/Volume" unique_id=1215651859]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="SoundOptions/Volume" unique_id=1729950849]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
max_value = 2.0
step = 0.001
value = 1.0

[node name="Deletion" type="Control" parent="SoundOptions" unique_id=687331500]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="DeleteButton" type="Button" parent="SoundOptions/Deletion" unique_id=68234597]
unique_name_in_owner = true
layout_mode = 0
offset_left = -91.0
offset_top = -11.0
offset_right = 21.0
offset_bottom = 20.0
text = "Delete Sound"

[node name="DeleteConfirm" type="Control" parent="SoundOptions/Deletion" unique_id=1808464388]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="SoundOptions/Deletion/DeleteConfirm" unique_id=1741664123]
layout_mode = 0
offset_left = -85.0
offset_top = -41.0
offset_right = 21.0
offset_bottom = -18.0
text = "Are you Sure?"

[node name="DeleteYes" type="Button" parent="SoundOptions/Deletion/DeleteConfirm" unique_id=912570141]
layout_mode = 0
offset_left = -220.0
offset_top = -11.0
offset_right = -108.0
offset_bottom = 20.0
text = "Yes"

[node name="DeleteNo" type="Button" parent="SoundOptions/Deletion/DeleteConfirm" unique_id=1970354073]
layout_mode = 0
offset_left = -91.0
offset_top = -11.0
offset_right = 21.0
offset_bottom = 20.0
text = "No"

[node name="IndexShifting" type="Control" parent="SoundOptions" unique_id=1624018609]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -122.0
offset_bottom = 63.0
grow_horizontal = 0

[node name="ShiftRight" type="Button" parent="SoundOptions/IndexShifting" unique_id=885474926]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 24.0
offset_right = -19.0
offset_bottom = 55.0
grow_horizontal = 0
text = "=>"

[node name="ShiftLeft" type="Button" parent="SoundOptions/IndexShifting" unique_id=1888434507]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 24.0
offset_right = -80.0
offset_bottom = 55.0
grow_horizontal = 0
text = "<="

[node name="OptionsMenu" parent="." unique_id=471212449 instance=ExtResource("2_0xm2m")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="OptionsButton" type="Button" parent="." unique_id=393821585]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Options"

[connection signal="file_selected" from="FileDialog" to="." method="_file_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopAll" to="." method="_on_stop_all_pressed"]
[connection signal="toggled" from="VBoxContainer/ActiveToggle" to="." method="_on_active_toggle"]
[connection signal="text_submitted" from="SoundOptions/Name/NameEditor" to="." method="_on_name_editor_submitted"]
[connection signal="value_changed" from="SoundOptions/Volume/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="SoundOptions/Deletion/DeleteButton" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="SoundOptions/Deletion/DeleteConfirm/DeleteYes" to="." method="_on_delete_yes_button_pressed"]
[connection signal="pressed" from="SoundOptions/Deletion/DeleteConfirm/DeleteNo" to="." method="_on_delete_cancel"]
[connection signal="pressed" from="SoundOptions/IndexShifting/ShiftRight" to="." method="_on_shift_right_pressed"]
[connection signal="pressed" from="SoundOptions/IndexShifting/ShiftLeft" to="." method="_on_shift_left_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
